5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1635_2446.log
== SUBMITION (2019-04-11 10:30:47) 
-- CODE:
a = senha// 1000000
b=(senha//100000)%10
c=(senha//1000)%10
d=(senha//100)%10
e(senha//10)%10
f=senha%10

x=(b+d+f)%(a+c+e)
if(x==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.194869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 1, in <module>
    a = senha// 1000000
NameError: name 'senha' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:49) 
-- CODE:
a = senha// 1000000
b=(senha//100000)%10
c=(senha//1000)%10
d=(senha//100)%10
e(senha//10)%10
f=senha%10

x=(b+d+f)%(a+c+e)
if(x==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = senha// 1000000
NameError: name 'senha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
